--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Portfolio</span></a></li> -->
-          <li><a href="#services" class="nav-link scrollto"><i class="bi bi-people-fill"></i> <span>Member
+          <li><a href="#testimonials" class="nav-link scrollto"><i class="bi bi-people-fill"></i> <span>Member
                 Grup</span></a>
           </li>
           <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
@@ -546,8 +546,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Personil</h2>
-          <p> Berikut nama-nama personil al-manshuriyyah</p>
+          <h2>Member Group</h2>
+          <p> Berikut nama-nama member al-manshuriyyah</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
